--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+/* NAVIGATION BAR */
+
+nav {
+    height: 80px;
+    display: flex;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+    background-color: white;
+    position: relative;
+}
+
+.nav__container {
+    width: 100%;
+    max-width: 1200px;
+    padding: 0 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.nav__link {
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.nav__list {
+  margin-left: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo__wrapper {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.logo__text--wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fa891a;
+  font-size: 24px;
+  position: relative;
+  margin-left: 8px;
+}
+
+ul {
+  display: flex;
+}
+
+li {
+  list-style-type: none;
 }
